# meals

./: README.md
api/: .flake8  .gitignore  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/accounts/: models.py  serializers.py  tasks.py  urls.py  views.py
api/accounts/lib/: tokens.py
api/accounts/migrations/: 0001_initial.py  0002_emailconfirmationtoken.py
api/config/: .env.example  settings.py  urls.py
api/main/: urls.py
api/main/migrations/: 0001_initial.py  0001_squashed_0002_alter_ingredient_amount_alter_ingredient_brand_and_more.py  0002_alter_ingredient_amount_alter_ingredient_brand_and_more.py  0003_alter_ingredient_amount.py  0004_ingredient_note.py  0005_alter_ingredient_note.py
api/main/models/: __init__.py  brand.py  direction.py  email_confirmation_token.py  equipment.py  food.py  ingredient.py  recipe.py  tag.py  time.py  time_category.py  unit.py  user.py
api/main/tasks/: send_signup_confirmation.py
api/main/tests/: conftest.py  factories.py
api/main/tests/models/: brand_test.py  direction_test.py  email_confirmation_token_test.py  equipment_test.py  food_test.py  ingredient_test.py  recipe_test.py  tag_test.py  time_category_test.py  time_test.py  unit_test.py  user_test.py
api/main/tests/support/: drf_view_helpers.py  request_helpers.py
api/main/tests/tasks/: send_signup_confirmation_test.py
api/main/tests/views/: account_destroy_test.py  brand_create_test.py  brand_destroy_test.py  brand_recipes_test.py  brand_test.py  brand_update_test.py  brands_test.py  csrf_token_test.py  direction_create_test.py  direction_destroy_test.py  direction_test.py  direction_update_test.py  directions_reorder_test.py  equipment_create_test.py  equipment_destroy_test.py  equipment_link_test.py  equipment_many_test.py  equipment_one_test.py  equipment_recipes_test.py  equipment_unlink_test.py  equipment_update_test.py  food_create_test.py  food_destroy_test.py  food_many_test.py  food_one_test.py  food_recipes_test.py  food_update_test.py  ingredient_create_test.py  ingredient_destroy_test.py  ingredient_test.py  ingredient_update_test.py  ingredients_reorder_test.py  login_test.py  logout_test.py  notes_destroy_test.py  notes_update_test.py  rating_destroy_test.py  rating_test.py  rating_update_test.py  recipe_create_test.py  (+32 more)
api/main/views/: account_destroy.py  brand.py  brand_create.py  brand_destroy.py  brand_recipes.py  brand_update.py  brands.py  direction.py  direction_create.py  direction_update.py  directions_reorder.py  equipment_create.py  equipment_destroy.py  equipment_link.py  equipment_many.py  equipment_one.py  equipment_recipes.py  equipment_unlink.py  equipment_update.py  food_create.py  food_destroy.py  food_many.py  food_one.py  food_recipes.py  food_update.py  ingredient.py  ingredient_create.py  ingredient_update.py  ingredients_reorder.py  login.py  logout.py  rating.py  rating_destroy.py  rating_update.py  recipe.py  recipe_create.py  recipe_destroy.py  recipe_title_update.py  recipes.py  servings_update.py  (+26 more)
api/recipes/: models.py  serializers.py  urls.py  views.py
api/recipes/migrations/: 0001_initial.py  0002_tag.py  0003_recipe_rating.py  0004_time_timecategory_time_time_category_and_more.py  0005_alter_tag_unique_together_and_more.py  0006_recipe_servings.py  0007_recipe_notes.py  0008_equipment_and_more.py  0009_brand_brand_recipes_brands_unique_name_user.py  0010_food_food_recipes_food_unique_name_user.py  0011_unit_unit_recipes_unit_unique_name_user.py  0012_ingredient.py  0013_ingredient_order.py  0014_alter_ingredient_unit.py  0015_direction_ingredient_ingredient_unique_order_recipe_and_more.py
api/recipes/views/: brand.py  brand_create.py  brand_destroy.py  brand_update.py  brands.py  direction_create.py  equipment.py  equipment_create.py  equipment_destroy.py  equipment_link.py  equipment_many.py  equipment_one.py  equipment_piece.py  equipment_recipes.py  equipment_unlink.py  equipment_update.py  food.py  food_create.py  food_destroy.py  food_many.py  food_one.py  food_update.py  ingredient.py  ingredient_create.py  ingredient_destroy.py  ingredient_update.py  ingredients_reorder.py  notes_destroy.py  notes_update.py  rating.py  rating_destroy.py  rating_update.py  recipe.py  recipe_create.py  recipe_destroy.py  recipe_title_update.py  recipes.py  servings_destroy.py  servings_update.py  tag.py  (+21 more)
api/shared/: urls.py  views.py
api/shared/lib/: client.py  responses.py
web/: .eslintrc.cjs  .stylelintrc.json  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  router.tsx
web/src/components/: AccountDeleteForm.tsx  Alert.tsx  Anchor.tsx  AnchorIcon.tsx  BrandEditForm.tsx  BrandList.tsx  BrandNewForm.tsx  Breadcrumbs.tsx  Button.tsx  Combobox.tsx  Content.tsx  Dialog.tsx  DirectionEditForm.tsx  DirectionNewForm.tsx  Directions.tsx  DivInput.tsx  DivLabel.tsx  Equipment.tsx  EquipmentEditForm.tsx  EquipmentForRecipeNewForm.tsx  EquipmentForRecipeUnlinkForm.tsx  EquipmentList.tsx  EquipmentNewForm.tsx  EquipmentRecipeUnlinkForm.tsx  ErrorBoundary.tsx  ErrorElementPage.tsx  ErrorPage.tsx  Field.tsx  FoodEditForm.tsx  FoodList.tsx  FoodNewForm.tsx  FoodSearchForm.tsx  Footer.tsx  FormActions.tsx  FormError.tsx  FullPageViewport.tsx  HRElement.tsx  Heading.tsx  Hero.tsx  HomeHero.tsx  (+71 more)
web/src/contexts/: AuthnContext.ts
web/src/fetchers/: accounts.ts  main.ts  recipes.ts  signup.ts
(+139 files in other folders)
