[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "1.0.0"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "celery[redis] ~= 5.2.7",
    "django ~= 4.1.6",
    "django-environ ~= 0.9.0",
    "django-extensions ~= 3.2.1",
    "djangorestframework ~= 3.14.0",
    "psycopg2 ~= 2.9.5",
]

[project.optional-dependencies]
dev = [
    "bandit ~= 1.7.4",
    "black ~= 23.1.0",
    "celery-types ~= 0.14.0",
    "django-types ~= 0.16.0",
    "djangorestframework-types ~= 0.8.0",
    "factory-boy ~= 3.2.1",
    "flake8 ~= 6.0.0",
    "flake8-bugbear ~= 23.1.14",
    "ipdb ~= 0.13.9",
    "isort ~= 5.12.0",
    "mypy ~= 1.0.0",
    "pip-tools ~= 6.12.2",
    "pytest ~= 7.2.0",
    "pytest-clarity ~= 1.0.1",
    "pytest-cov ~= 4.0.0",
    "pytest-django ~= 4.5.2",
    "pytest-mock ~= 3.10.0",
    "watchdog[watchmedo] ~= 2.2.1",
    "wheel ~= 0.38.4",
]

[tool.mypy]
exclude = ["recipes/migrations"]
files = ["accounts", "recipes", "shared"]
mypy_path = "stubs"
show_error_codes = true
strict = true
warn_unreachable = true
warn_unused_ignores = true
